<resources>
    <string name="app_name">Guess A Number</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appTitleText">Daisy\'s Guessing Game</string>
    <string name="userGuessLabelText">Please enter a number between 1 and 1000</string>
    <string name="guessButtonText">Guess Now</string>
    <string name="resetButtonText">Reset</string>
    <string name="userGuessText" />
    <string name="dialog_message">Paul Harvey (harv0116)</string>
    <string name="dialog_title">About</string>
    <string name="ok">OK</string>
    <string name="action_about">About</string>
</resources>
