<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffd6ec"
    android:id="@+id/appBackground">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/daisy"
        android:nestedScrollingEnabled="true"
        android:baselineAlignBottom="false"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/resetButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitleText"
        android:id="@+id/appTitle"
        android:textSize="14dp"
        android:textColor="@android:color/black"
        android:textIsSelectable="false"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userGuessLabelText"
        android:id="@+id/userGuessLabel"
        android:textSize="11dp"
        android:layout_below="@+id/appTitle"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userGuessText"
        android:text="@string/userGuessText"
        android:paddingStart="20dp"
        android:layout_alignEnd="@+id/guessButton"
        android:width="50dp"
        android:layout_below="@+id/userGuessLabel"
        android:layout_alignStart="@+id/guessButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guessButtonText"
        android:id="@+id/guessButton"
        android:longClickable="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@+id/userGuessText"
        android:layout_toEndOf="@+id/resetButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetButtonText"
        android:id="@+id/resetButton"
        android:layout_marginTop="5dp"
        android:longClickable="true"
        android:layout_below="@+id/guessButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
